# bacnet_plugin

./: .gitignore  .gitmodules  .pubignore  CHANGELOG.md  CONTRIBUTING.md  README.md  analysis_options.yaml  ffigen.yaml  pubspec.yaml
.agent/rules/: rules.md
.github/workflows/: ci.yml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt
benchmark/: decoder_benchmark.dart
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/bacnet_plugin_example/: MainActivity.kt
example/integration_test/: bacnet_native_test.dart  minimal_server_test.dart  server_test_raw.dart  stable_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: app_state.dart  main.dart
example/lib/models/: app_mode.dart  server_object.dart
example/lib/screens/: dashboard_screen.dart  device_detail_screen.dart  device_list_screen.dart  main_screen.dart  object_monitor_screen.dart
example/lib/screens/server/: server_screen.dart
example/lib/widgets/: empty_state_widget.dart  log_console.dart  property_monitor_widget.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
integration_test/: client_server_test.dart
ios/: bacnet_plugin.podspec
lib/: bacnet_plugin.dart  bacnet_plugin_bindings.g.dart
lib/src/client/: bacnet_client.dart
lib/src/constants/: error_codes.dart  object_types.dart  property_ids.dart
lib/src/core/: bacnet_config.dart  exceptions.dart  logger.dart  types.dart
lib/src/models/: bacnet_object.dart  bacnet_object.g.dart  device_metadata.dart  device_metadata.g.dart  discovered_device.dart  discovered_device.g.dart  property_update.dart  rpm_models.dart  rpm_models.g.dart  trend_log_data.dart  trend_log_data.g.dart  wpm_models.dart  wpm_models.g.dart
lib/src/models/internal/: worker_message.dart
lib/src/native/: bacnet_system.dart
lib/src/native/worker/: callbacks.dart  decoder.dart  entry_point.dart  globals.dart  read_range_decoder.dart  rpm_decoder.dart
lib/src/native/worker/handlers/: client_handlers.dart  server_handlers.dart
lib/src/server/: bacnet_server.dart
lib/src/utilities/: device_scanner.dart  property_monitor.dart
linux/: CMakeLists.txt
macos/: bacnet_plugin.podspec
macos/Classes/: bacnet_plugin.c
native/src/: bacnet_plugin.c  bacnet_plugin.h
scripts/: patch_native.sh
test/: bacnet_object_test.dart  constants_test.dart  device_scanner_test.dart  property_monitor_test.dart  read_range_decoder_test.dart  rpm_models_test.dart
windows/: CMakeLists.txt
